--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -4,10 +4,6 @@
   margin-bottom: 20px;
 }
 
-.Dictionary {
-  max-width: 700px;
-}
-
 .Dictionary section {
   background: #fff;
   padding: 30px;
