--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,7 +1,3 @@
-.Meaning {
-  max-width: 700px;
-}
-
 .Meaning .example {
   color: #70757a;
   font-style: italic;
