--- a/src/Results.css
+++ b/src/Results.css
@@ -1,7 +1,3 @@
-.Results {
-  max-width: 700px;
-}
-
 .Results h2 {
   font-size: 36px;
   line-height: 1.5;
